# cesop

./: .gitignore  Cargo.toml  README.md
app/: README.md  main.py
app/core/: __init__.py  config.py
app/routers/: __init__.py  pipeline.py  presentation.py
app/services/: pipeline_service.py
app/static/css/: pipeline.css
app/static/js/: pipeline.js
app/templates/presentation/: pipeline.html
app/templates/presentation/partials/: pipeline_sample.html
docs/: business_rules.md  cesop directive.htm  cli_flags.md  input_schema.md  mapping.md
docs/XSD User Guide v6.00/: CESOP - XSD User Guide-v6.00.docx
docs/portfolio/: README.md
schemas/v6_00/: PaymentData.xsd  commontypes.xsd  isotypes.xsd
scripts/: demo.sh
scripts/CESOP Validation Module/: Licensed under the CESOP EULA v1.0.doc
scripts/CESOP Validation Module/SDEV-CESOP-VM-v1.7.1/: cesop-validation-1.7.1.pom
scripts/CESOP Validation Module/SDEV-CESOP-VM-v1.7.1/cesop pom/: .flattened-pom.xml  pom.xml
scripts/CESOP Validation Module/SDEV-CESOP-VM-v1.7.1/parent pom/: .flattened-pom.xml  pom.xml
src/: analysis.rs  cesop_xml.rs  correct.rs  corrupt.rs  generator.rs  location.rs  logging.rs  main.rs  models.rs  preflight.rs  reference.rs  util.rs  validation.rs
