[package]
name = "cesop-demo"
version = "0.1.0"
edition = "2021"

authors = ["duckwilly"]

description = "CESOP XML generator demo"

[dependencies]
log = "0.4"
fern = "0.6"
clap = { version = "4.5.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
uuid = { version = "1.8", features = ["v4", "serde"] }
quick-xml = "0.31"
